# hs

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
app/: main.cpp
app/include/hs/: app.hpp
app/src/: app.cpp  main.cpp
include/hs/: job_info.hpp  member.hpp  member_store.hpp  time.hpp  types.hpp  utils.hpp
scripts/: build.sh  configure.sh
src/: job_info.cpp  member.cpp  member_store.cpp  utils.cpp
tests/: CMakeLists.txt
tests/src/: member.cpp
